Updated Footer in search.html

--- a/JS-Mini-Project/search.html
+++ b/JS-Mini-Project/search.html
@@ -40,7 +40,12 @@
   </body>
 
   <!-- Footer Section -->
-  <footer class="footer">
-    <div class="container">
-      <p>Copyright 2025 | Silas Aurelius Leone
+    <footer class="footer">
+      <div class="container">
+        <p>Copyright 2025 | Silas Aurelius Leone | 
+          <a href="https://github.com/SilasAurelius" target="_blank">GitHub</a> | 
+          <a href="https://www.linkedin.com/in/silas-leone-794248284/" target="_blank">LinkedIn</a>
+        </p>
+      </div>
+    </footer>
 </html>
